# game-reader-wayland

./: .gitignore  Dockerfile  Dockerfile.build  README.md  build.bat  build.sh  build_deck.sh  build_deck_container.sh  build_deck_full.sh  build_pyinstaller.bat  build_pyinstaller.sh  capture.py  game_reader.spec  game_reader_deck.spec  game_reader_gui.py  lektor.py  lektor.spec  nuitka-crash-report.xml  patch_sliders.py  pyproject.toml  reader.py  requirements.txt  requirements.win.txt  subtitles.txt  test.py  test2.py  test3.py
app/: area_manager.py  area_selector.py  capture.py  config_manager.py  ctk_widgets.py  dbus_ss.py  geometry_utils.py  gui_utils.py  help.py  log.py  matcher.py  ocr.py  optimization_result.py  optimization_wizard.py  optimizer.py  path_utils.py  player.py  processing_window.py  reader.py  scale_utils.py  settings.py  text_processing.py  utils.py
tests/: test_architecture.py  test_area_manager.py  test_area_refinement_union.py  test_capture.py  test_config_manager.py  test_config_manager_scaling.py  test_config_migration.py  test_geometry.py  test_matcher.py  test_ocr_processing.py  test_optimization_flow.py  test_optimization_flow.py.bak  test_optimizer.py  test_optimizer_extra.py  test_player.py  test_reader_utils.py  test_scaling.py  test_settings_integration.py  test_text_processing.py
